<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 系统 -->
    <string name="hello">Hello World, Flash!</string>
    <string name="app_name">玩转北理</string>
    
    <!-- 功能列表 -->
    <string name="service_menu_eat">美食</string>
    <string name="service_menu_play">娱乐</string>
    <string name="service_menu_hotel">宾馆</string>
    <string name="service_menu_traffic">交通</string>
    
    <string name="downloading">数据更新中...</string>
    
    <!-- 饭店列表 -->
    <string name="rest_outsale">外卖</string>
    <string name="rest_shitang">食堂</string>
    <string name="rest_rest">餐馆</string>
    
    <!-- 新增饭店界面 -->
    <string name="add_new_rest">添加新饭店</string>
    <string name="add_new_rest_name">名称</string>
    <string name="add_new_rest_location">位置</string>
    <string name="add_new_rest_desc">描述</string>
    <string name="add_new_rest_issale">送外卖</string>
    <string name="add_new_rest_isrest">饭店</string>
    <string name="add_new_rest_isshitang">食堂</string>
    <string name="add_new_rest_phone">电话</string>
    
    <!-- 饭店详细 -->
    <string name="call_phone">拨打电话</string>
    <string name="cancel_phone">看看别的</string>
    
    
    <!-- 娱乐 -->
    <string name="amuse_ktv">KTV</string>
    <string name="amuse_theater">电影院</string>
    <string name="amuse_mall">商场</string>
    
    
    
    <!-- menu菜单 -->
    <string name="change_campus">更换校区</string>
    <string name="exitMessage">确定要退出 玩转北理 么？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="sys_config">设置</string>
    
    <string name="auto_update_yes">开启自动更新</string>
    <string name="auto_update_not">关闭自动更新</string>
    
    
    <!-- 第一版BIT专用 -->
    <string name="bit_zol">中关村校区</string>
    <string name="bit_lit">良乡校区</string>
    
</resources>
